styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

/* Custom classes */
@layer components {
  .navbar-icons {
    @apply relative flex h-12 w-12
            cursor-pointer items-center 
            justify-center overflow-hidden 
            rounded-3xl bg-gray-800
            text-green-400 transition-all
            duration-300
            ease-linear
            hover:rounded-xl hover:bg-gray-700 hover:text-white;
  }

  .navbar-tooltip {
    @apply font-lato m-2 w-auto min-w-max
            origin-right scale-0
            rounded-md bg-white
            p-2 text-sm
            text-gray-900 shadow-md transition-all duration-300;
  }

  .scale-zero {
    @apply scale-0 transform transition-all duration-300 ease-linear;
  }

  .error {
    @apply font-lato text-xs text-red-600;
  }
}

